force-app/main/default/objects/Course_Assessment__c/Course_Assessment__c.object-meta.xml
<CustomObject>
    <label>Course Assessment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>