force-app/main/default/objects/Course_Assessment__c/fields/Assessment_Model__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Model</label>
    <referenceTo>Assessment_Model__c</referenceTo>
    <relationshipLabel>Course Assessments</relationshipLabel>
    <relationshipName>Course_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>