force-app/main/default/objects/Course_Assessment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Assessments</relationshipLabel>
    <relationshipName>Course_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>