force-app/main/default/objects/Course_Assessment__c/fields/Days_From_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Start__c</fullName>
    <label>Days From Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>